<resources>
    <!-- Global -->
    <string name="app_name">Public Transport App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_button_description">Menu button image</string>

    <!-- Menu -->
    <string name="menu_title">Public Transport\nPrototype Application</string>
    <string name="menu_authors">By Jacob and Jonathan</string>
    <string name="menu_item_nearby">Nearby</string>
    <string name="menu_item_payment">Payment</string>
    <string name="menu_item_gate_connection">Connect to gate</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_measurement">Measurement</string>


    <!-- Settings fragment -->
    <string name="settings_depending_status">Independent/Dependent prices</string>
    <string name="settings_dependent_text">Prices depends on destination</string>
    <string name="settings_independent_text">"Prices are independent of destination"</string>
    <string name="settings_automatic_status">Manually/automatically</string>
    <string name="settings_automatic_text">Pay automatically when approaching gate</string>
    <string name="settings_manually_text">Pay manually when approaching gate</string>
    <string name="settings_subscription_status">Has subscription?</string>
    <string name="settings_subscription_text">You have paid for a subscription</string>
    <string name="settings_no_subscription_text">You have not paid for a subscription</string>
    <string name="settings_kalman_status">Kalman Filter System Noise</string>
    <string name="settings_kalman_value">5.0</string>
    <string name="settings_wd_status">Walk detection?</string>
    <string name="settings_gate_simulation_status">Simulate a gate at Spår 2</string>
    <string name="settings_enabled">Enabled</string>
    <string name="settings_disabled">Disabled</string>
    <string name="settings_selfcorrection_status">Self-correcting beacon</string>


    <!-- Payment fragment -->
    <string name="payment_cost_text">The ticket will cost: </string>
    <string name="payment_ticket_text">A trip from %1$s to %2$s will cost: </string>
    <string name="payment_ticket_text_default">A trip from your current station to Lund C will cost: </string>
    <string name="payment_price_tag">%1$d kr</string>
    <string name="payment_price_tag_default">25 kr</string>
    <string name="payment_choose_your_destination">Choose your destination:</string>
    <string name="payment_valid_text">Ticket is valid for 2 hours</string>
    <string name="payment_buy_button_text">Buy ticket</string>
    <string name="payment_dialog_cancel">Cancel</string>

    <!-- Buy ticket dialog -->
    <string name="dialog_ticket_summery">TICKET SUMMERY</string>
    <string name="dialog_summary_labels">From:\nTo:\nValid until:\nPrice:</string>
    <string name="dialog_summary_placeholders">Malmö C\nLund C\n14:22\n39kr</string>
    <string name="dialog_payment_options">Payment options:</string>
    <string name="dialog_add_card">Add card</string>
    <string name="dialog_plus">+</string>
    <string name="dialog_visa_code">XXXX XXXX XXXX 1454</string>
    <string name="dialog_mastercard_code">XXXX XXXX XXXX 5467</string>

    <!-- Nearby fragment -->
    <string name="beacons_lost">Searching for nearby stations...</string>
    <string name="beacons_found">You have entered a station</string>
    <string name="nearby">Nearby</string>
    <string name="timetable">Timetable</string>
    <string name="image_description">Header image</string>
    <string name="welcome_message">Welcome to Lund\'s Central Station</string>

    <!-- Show ticket fragment -->
    <string name="ticket_not_valid">This ticket is no longer valid.</string>
    <string name="ticket_text_with_destination">Ticket is valid to %1$s until the timer is finished</string>
    <string name="ticket_no_destination">Nowhere</string>
    <string name="ticket_invalid">INVALID TICKET</string>
    <string name="ticket_removed">Ticket removed</string>
    <string name="ticket_countdown_text">Valid countdown:</string>
    <string name="ticket_text">Ticket </string>
    <string name="ticket_countdown_default">0</string>
    <string name="ticket_placeholder_current_station_name">Lund central</string>
    <string name="ticket_placeholder_current_station_abbreviation">LU</string>
    <string name="ticket_placeholder_destination_name">Malmö central</string>
    <string name="ticket_placeholder_destination_abbreviation">MLM</string>
    <string name="ticket_placeholder_time">08.00</string>
    <string name="ticket_placeholder_date">Wed 07 Sep</string>
    <string name="ticket_placeholder_distance_to_track">11 m</string>
    <string name="ticket_placeholder_transport">Pågatåg</string>
    <string name="ticket_placeholder_track_number">10 B</string>
    <string name="ticket_distance_to_track">DISTANCE TO TRACK</string>
    <string name="ticket_bought_ticket">Bought ticket</string>
    <string name="ticket_transportation_type">Train/Bus</string>
    <string name="ticket_valid_until">Valid until</string>
    <string name="ticket_next_departure">NEXT DEPARTURE</string>
    <string name="ticket_time_to_next_departure">TIME TO NEXT DEPARTURE</string>
    <string name="ticket_track_number">TRACK NUMBER</string>


    <!-- Gate Connection fragment -->
    <string name="open_gate_button_text">Press to open</string>
    <string name="no_gates_nearby">No gates currently nearby.</string>
    <string name="searching_for_gate">Searching for gates nearby…</string>
    <string name="connecting_to_gate">Connecting to nearby gate…</string>
    <string name="approach_gate">Please approach the nearby gate.</string>
    <string name="connected_to_gate">Connected to nearby gate</string>
    <string name="gate_authorized">Please enter!</string>
    <string name="gate_unauthorized">Sorry, you are not authorized to enter.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_background">BackgroundActivity</string>
</resources>
