<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/dialog_ticket_summery"
        android:textColor="@color/color_dialog_text"
        android:textSize="22sp"
        android:layout_margin="22dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_dialog_selected" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/staticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_summary_labels"
            android:layout_margin="22dp"
            android:textColor="@color/color_dialog_text"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/dialog_description_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_summary_placeholders"
            android:textSize="16sp"
            android:textColor="@color/color_dialog_text"
            android:layout_margin="22dp"
            android:layout_toEndOf="@+id/staticText"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_payment_options"
        android:layout_marginTop="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/color_dialog_text"
        android:textSize="16sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_dialog_selected" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_dialog_selected"
        android:id="@+id/visaButton"
            android:paddingStart="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/logo_visa"
            android:scaleType="centerInside"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_visa_code"
            android:textColor="#838588"
            android:paddingStart="40dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_dialog_selected" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mastercardButton"
            android:paddingStart="10dp">

        <ImageView
            android:layout_height="22dp"
            android:layout_width="50dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/logo_mastercard"
            android:scaleType="centerInside"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_mastercard_code"
            android:textColor="@color/color_dialog_text"
            android:paddingStart="40dp"
            android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_dialog_selected" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addCardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_card"
            android:textColor="@color/color_dialog_text"
            android:textAlignment="textStart"
            android:paddingStart="100dp"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_marginTop="3dp"
            android:layout_marginStart="28dp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_plus"
            android:textSize="28sp"
            android:textAlignment="center"
            />
    </RelativeLayout>
</LinearLayout>